--- a/SATSTrainingApp/app/src/main/res/layout/date_header.xml
+++ b/SATSTrainingApp/app/src/main/res/layout/date_header.xml
@@ -6,7 +6,7 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="22dp"
         android:id="@+id/date_header"
         android:background="@color/background_header"
         android:paddingLeft="15dp"
