--- a/SATSTrainingApp/app/src/main/res/layout/activity_main.xml
+++ b/SATSTrainingApp/app/src/main/res/layout/activity_main.xml
@@ -13,65 +13,91 @@
 
         <include
             android:id="@+id/toolbar"
-            layout="@layout/toolbar" />
+            layout="@layout/toolbar"/>
 
         <LinearLayout
-            android:id="@+id/main_content"
+            android:orientation="vertical"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:layout_below="@id/toolbar"
-            android:orientation="vertical">
+            android:id="@+id/main_content"
+            android:layout_below="@id/toolbar">
 
             <com.sothree.slidinguppanel.SlidingUpPanelLayout
-                xmlns:sothree="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/sliding_layout"
+                xmlns:sothree="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="bottom"
-                sothree:umanoDragView="@+id/tidigare"
+                sothree:umanoDragView="@+id/activity_status"
                 sothree:umanoOverlay="true"
                 sothree:umanoPanelHeight="300dp"
                 sothree:umanoParalaxOffset="100dp"
                 sothree:umanoShadowHeight="4dp">
 
-                <FrameLayout
-                    android:id="@+id/graph"
+                <RelativeLayout
+                    android:id="@+id/relativeLayout"
                     android:layout_width="wrap_content"
-                    android:layout_height="250dp" />
+                    android:layout_height="wrap_content">
+
+                    <android.support.v4.view.ViewPager
+                        android:id="@+id/graph"
+                        android:layout_width="match_parent"
+                        android:layout_height="180dp"
+                        android:divider="@drawable/vertical_divider" />
+
+                    <ImageView
+                        android:layout_width="20dp"
+                        android:layout_height="150dp"
+                        android:layout_marginLeft="125dp"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/calendet_mark_right"
+
+                        />
+
+                    <ImageView
+                        android:id="@+id/shadow"
+                        android:layout_width="20dp"
+                        android:layout_height="150dp"
+                        android:layout_marginLeft="215dp"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/calendet_mark_left" />
+
+                </RelativeLayout>
 
                 <RelativeLayout
                     android:id="@+id/my_training"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@color/white">
+                    android:background="@color/gray_light">
 
                     <TextView
-                        android:id="@+id/tidigare"
+                        android:id="@+id/activity_status"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginTop="9dp"
-                        android:gravity="center_vertical"
                         android:text=""
-                        android:textColor="@color/dark_gray"
+                        android:gravity="center_vertical"
+                        android:background="@color/gray_light"
                         android:textSize="12dp"
-                        android:textStyle="bold" />
-
+                        android:layout_marginLeft="10dp"
+                        android:textStyle="bold"
+                        android:layout_marginTop="9dp"/>
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:src="@drawable/drag_button_normal"
                         android:layout_centerHorizontal="true"
                         android:scaleX="0.50"
-                        android:scaleY="0.50"
-                        android:src="@drawable/drag_button_normal" />
+                        android:scaleY="0.50"/>
+
+
 
 
                     <se.emilsjolander.stickylistheaders.StickyListHeadersListView
                         android:id="@+id/listan"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/tidigare"
-                        android:layout_marginTop="10dp" />
+                        android:layout_below="@+id/activity_status"
+                        android:layout_marginTop="10dp"/>
 
                 </RelativeLayout>
 
