--- a/SATSTrainingApp/app/src/main/res/layout/activity_booked.xml
+++ b/SATSTrainingApp/app/src/main/res/layout/activity_booked.xml
@@ -273,7 +273,7 @@
                         android:textAppearance="?android:attr/textAppearanceSmall"
                         android:text="Lägg till i kalender"
                         android:layout_marginTop="2dp"
-                        android:textSize="11dp" />
+                        android:textSize="11sp" />
                 </LinearLayout>
 
             </RelativeLayout>
@@ -316,7 +316,7 @@
                         android:textAppearance="?android:attr/textAppearanceSmall"
                         android:text="Mer om passet"
                         android:layout_marginTop="1dp"
-                        android:textSize="11dp" />
+                        android:textSize="11sp" />
                 </LinearLayout>
 
             </RelativeLayout>
