--- a/SATSTrainingApp/app/src/main/res/layout/my_training_listview.xml
+++ b/SATSTrainingApp/app/src/main/res/layout/my_training_listview.xml
@@ -50,21 +50,19 @@
                         android:divider="@drawable/vertical_divider" />
 
                     <ImageView
-                        android:layout_width="20dp"
-                        android:layout_height="150dp"
-                        android:layout_marginLeft="125dp"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/calendet_mark_right"
-
-                        />
+                        android:id="@+id/back_to_now_right"
+                        android:layout_width="75px"
+                        android:layout_height="60px"
+                        android:layout_alignParentRight="true"
+                        android:rotationY="180"
+                        android:src="@drawable/back_to_now"/>
 
                     <ImageView
-                        android:id="@+id/shadow"
-                        android:layout_width="20dp"
-                        android:layout_height="150dp"
-                        android:layout_marginLeft="215dp"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/calendet_mark_left" />
+                        android:id="@+id/back_to_now_left"
+                        android:layout_width="75px"
+                        android:layout_height="60px"
+                        android:layout_alignParentLeft="true"
+                        android:src="@drawable/back_to_now"/>
 
                 </RelativeLayout>
 
